# gtkpod

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog_detailed  INSTALL  INSTALL_GIT  INSTALL_SVN  Makefile.am  NEWS  README  TODO  TODOandBUGS.txt  TROUBLESHOOTING  acconfig.h  aclocal.m4  autogen.sh  configure.ac  configure.in  generate-ChangeLog.sh  gtkpod.glade  gtkpod.gladep  itunesdb_info.txt  libgtkpod-1.0.pc.in  libgtkpod-1.1.0.pc.in  version.m4  version.sh
data/: Makefile.am  anjuta.session  default.profile  directories.mk  dock-layout.xml  gtkpod.desktop.in  gtkpod.glade  gtkpod.gladep  gtkpod.ui
data/glade/: Makefile.am  clarity.glade  clarity.xml  core-gtkpod.xml  core_prefs.xml  cover_display.xml  details_editor.xml  exporter.xml  gtkpod.glade  photo_editor.glade  sorttab_display.xml
data/icons/: Makefile.am  gtkpod.xpm
data/man/: Makefile.am  gtkpod.1  gtkpod.1.in
data/ui/: Makefile.am  clarity.ui  coverart_preview_dialog.ui  export_playlist_file_options.ui  file_transfer_information_dialog.ui  gtkpod.ui  info_dialog.ui  input_box.ui  ipod_init_dialog.ui  photo_editor.ui  preferences.ui  prefs_coverart_dialog.ui  prefs_exclusions_dialog.ui  prefs_mserv_dialog.ui  prefs_tag_parse_dialog.ui  prefs_video_thumbnailer_dialog.ui  set_ipod_model_dialog.ui  spl_window.ui
doc/: Makefile.am  adding-cover-art-from-a-browser.html  adding-files-and-folders.html  advanced-features.html  copying-content-to-the-ipod.html  cover-art.html  exporting-files-from-the-ipod.html  getting-started.html  gtkpod-info.html  gtkpod.html  gtkpod.xml  gtkpod_20140922-HTML.tgz  hooking-up-the-ipod.html  ipod-and-content.html  ipod-file-recovery.html  layout-of-gtkpod.html  managing-playlists.html  playcounts-and-ratings.html  playlists-podcasts-and-photos.html  setting-ipod-properties.html  the-sysinfo-file.html  troubleshooting-faq.html  view-and-edit-track-details.html
doc/figures/: Makefile.am
libgtkpod/: Makefile.am  autodetection.c  autodetection.h  charset.c  charset.h  clientserver.c  clientserver.h  confirmation.c  confirmation.h  context_menus.c  context_menus.h  details_editor_iface.c  details_editor_iface.h  directories.c  directories.h  exporter_iface.c  exporter_iface.h  file.c  file.h  file_convert.c  file_convert.h  file_convert_info.h  file_itunesdb.c  fileselection.c  fileselection.h  filetype_iface.c  filetype_iface.h  flacfile.c  flacfile.h  getopt.c  getopt.h  getopt1.c  gp.h  gp_itdb.c  gp_itdb.h  gp_private.c  gp_private.h  gp_spl.c  gp_spl.h  gtkpod_app-marshallers.c  (+49 more)
libs/atomic-parsley/: AP_AtomDefinitions.h  AP_AtomExtracts.cpp  AP_AtomExtracts.h  AP_commons.cpp  AP_commons.h  AP_iconv.cpp  AP_iconv.h  APar_sha1.cpp  APar_sha1.h  APar_uuid.cpp  APar_uuid.h  AtomicParsley.cpp  AtomicParsley.h  AtomicParsleyBridge.cpp  AtomicParsleyBridge.h  AtomicParsley_genres.cpp  AtomicParsley_genres.h  COPYING  Makefile.am
plugins/: Makefile  Makefile.am  Makefile.in  plugins.mk
plugins/advhelloworld/: Makefile.am  advhelloworld.plugin  advhelloworld.ui  plugin.c  plugin.h
plugins/clarity/: Makefile.am  album_model.c  album_model.h  clarity.plugin  clarity.plugin.in  clarity.ui  clarity.xml  clarity_canvas.c  clarity_canvas.h  clarity_context_menu.c  clarity_context_menu.h  clarity_cover.c  clarity_cover.h  clarity_dnd_support.c  clarity_dnd_support.h  clarity_flip_effect.c  clarity_flip_effect.h  clarity_preferences.c  clarity_preferences.h  clarity_preview.c  clarity_preview.h  clarity_utils.c  clarity_utils.h  clarity_widget.c  clarity_widget.h  fetchcover.c  fetchcover.h  plugin.c  plugin.h
plugins/core/: autodetection.c  confirmation.c  context_menus.h  date_parser2.c  details.c  display.h  display_itdb.h  file.c  file_convert.c  file_export.c  fileselection.c  flacfile.h  info.h  misc.h  misc_confirm.c  mp4file.c  prefs.h  repository.c  sha1.c  sort_window.h  syncdir.c  wavfile.h
plugins/core_preferences/: Makefile.am  core_prefs.c  core_prefs.h  core_prefs.plugin  core_prefs.plugin.in  core_prefs.xml  plugin.c  plugin.h
plugins/cover_display/: Makefile.am  cover_display.glade  cover_display.plugin  cover_display.plugin.in  cover_display.xml  cover_display_context_menu.c  cover_display_context_menu.h  cover_display_preferences.c  cover_display_preferences.h  display_coverart.c  display_coverart.h  fetchcover.c  fetchcover.h  plugin.c  plugin.h
plugins/coverweb/: Makefile.am  coverweb.c  coverweb.glade  coverweb.h  coverweb.plugin  coverweb.plugin.in  coverweb.xml  coverweb_preferences.c  coverweb_preferences.h  plugin.c  plugin.h
plugins/details_editor/: Makefile.am  details.c  details.h  details_editor.glade  details_editor.plugin  details_editor.plugin.in  details_editor.xml  details_editor_actions.c  details_editor_actions.h  plugin.c  plugin.h
plugins/exporter/: Makefile.am  exporter.glade  exporter.plugin  exporter.plugin.in  exporter.ui  exporter.xml  file_export.c  (+5 more)
scripts/: Makefile.am  convert-2m4a.sh  convert-2mp3.sh  convert-2mp4.sh  convert-flac2m4a.sh  convert-flac2mp3.sh  convert-m4a2mp3.sh  convert-mp32m4a.sh  convert-ogg2m4a.sh  convert-ogg2mp3.sh  convert-wav2m4a.sh  convert-wav2mp3.sh  gtkpod-convert-common.sh  kaddressbook_ipod.sh  ldif2vcf.sh  mab2vcard  sync-abook.sh  sync-evocalendar.sh  sync-evolution.sh  sync-kaddressbook.sh  sync-knotes.sh  sync-korganizer.sh  sync-ldif.sh  sync-notes.sh  sync-palm-jppy.py  sync-thunderbird-nano.sh  sync-thunderbird.sh  sync-tomboy.sh  sync-webcalendar.sh
src/: Makefile.am  Makefile.in  README_src.txt  anjuta-about.c  anjuta-about.h  anjuta-action-callbacks.c  anjuta-action-callbacks.h  anjuta-actions.h  anjuta-app.c  anjuta-app.h  anjuta-window.c  anjuta-window.h  autodetection.c  autodetection.h  callbacks.c  callbacks.h  charset.c  charset.h  clientserver.c  clientserver.h  confirmation.c  confirmation.h  context_menus.c  context_menus.h  date_parser.h  date_parser.l  date_parser2.l  delete_window.c  delete_window.h  details.c  details.h  dirbrowser.c  dirbrowser.h  directories.c  directories.h  display.c  display.h  display_coverart.c  display_coverart.h  display_itdb.c  (+97 more)
(+461 files in other folders)
